Scroll not yet fixed, work on mobile menu closing behaviour

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -4,10 +4,11 @@ html {
     scroll-behavior: smooth;
     overflow-x: hidden;
     width: 100%;
-    border: 1px solid greenyellow;
+    background-color: greenyellow;
 }
 body {
-    width: 100%;
+    width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
     border: 1px solid red;
     @include boxReset;
@@ -24,7 +25,7 @@ img {
     display: block;
 }
 .overflowContainer {
-    max-width: 100%;
+    flex-basis: 100%;
     overflow-x: hidden;
 }
 .wrapper {
