--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,9 +1,9 @@
 // header styling - mobile first
 header {
     min-height: 320px;
+    max-width: 100%;
     background-color: $blue-sapphire;
     .wrapper {
-        min-height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -16,18 +16,22 @@ header {
         max-width: 100%;
         height: 60%;
         margin-top: 20px auto;
+        display: flex;
+        justify-content: space-between;
     }
     .mobileContainer {
         max-width: 100%;
+        width: 100vw;
         display: flex;
+        justify-content: space-between;
     }
     .mobileFlexContainer {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100vw;
         max-width: 100%;
         height: 100px;
-        margin: 0 auto;
     }
     .logoContainer {
         display: flex;
@@ -53,18 +57,29 @@ header {
     }
     .mobileNavButton {
         padding: 1.5rem 2.0rem;
+        padding-right: 0.5rem;
         font-size: $iconSize;
+        display: flex;
+        align-items: center;
         cursor: pointer;
         z-index: 20;
+
+        p {
+            margin-top: 0;
+            margin-bottom: 0.5rem;
+            padding: 1rem;
+            text-transform: uppercase;
+        }
     }
     .mobileNavList {
-        position: fixed;
-        top: -400px;
-        left: 0;
+        position: absolute;
+        top: -1px;
+        left: -10000px;
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
         max-width: 100%;
+        width: 100%;
         background-color: white;
         border-bottom: 5px solid $blue-sapphire;
         
@@ -74,9 +89,10 @@ header {
             justify-content: flex-start;
             align-items: center;
             max-width: 100%;
+            width: 100%;
             z-index: 30;
             height: 50px;
-            margin-left: 10px;
+            padding-left: 10px;
         }
         a {
             color: $blue-sapphire;
@@ -97,10 +113,10 @@ header {
     .navOpen {
         transition: display display 0.3s;
         transition-delay: 0.3s;
-        margin-bottom: 50%;
+        margin-bottom: 20rem;
         display: block;
         .mobileContainer {
-            position: fixed;
+            position: absolute;
             left: 0;
             top: 0;
             flex-direction: column-reverse;
@@ -115,6 +131,7 @@ header {
             transition-delay: 300ms;
             display: flex;
             top: 0;
+            left: 0;
             margin-top: 100px;
         }
         .logoCircle {
