--- a/styles/sass/partials/_mainStyles.scss
+++ b/styles/sass/partials/_mainStyles.scss
@@ -140,6 +140,7 @@
 // Blog section
 .blog {
     color: black;
+    background-color: white;
     .subHeadingContainer h4 {
         padding-top: 16px;
     }
