--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -93,7 +93,7 @@
             display: none;
         }
         .desktopNav{
-            width: 100%;
+            max-width: 100%;
             height: 125px;
             display: flex;
             flex-direction: row;
@@ -167,8 +167,8 @@
             justify-content: space-between;
             align-items: center;
 
-            a {
-                flex-basis: 50%;
+            img {
+                max-width: 50%;
             }
         }
         .rowReverse {
